<resources>
    <string name="app_name">RayKun</string>
    <string name="smart_sales_force">Smart Sales Force</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="demo_login">Demo Login</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">Tasks</string>
    <string name="products">Products</string>
    <string name="surveys">Surveys</string>
    <string name="sales">Sales</string>
    <string name="clients">Clients</string>
    <string name="reports">Reports</string>
    <string name="dashboard">Anaylitics</string>
    <string name="geotrack">Geotrack</string>
    <string name="dialing">Dialing</string>
    <string name="expenses">Expenses</string>
    <string name="geolocation">Geolocation</string>
    <string name="exit">Exit</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="proceed_with_deletion">Are you sure you want to proceed with the deletion?</string>
    <string name="proceed_with_routing">Are you sure you want to proceed with the routing?</string>
    <string name="invoice_info">Invoice Info</string>
    <string name="contacts">Contacts</string>
    <string name="team_sales">Team Sales</string>
    <string name="distance_away"> km Away</string>
    <string name="change_view">Change view</string>
    <string name="weekly_view">Weekly view</string>
    <string name="monthly_view">Monthly view</string>
    <string name="yearly_view">Yearly view</string>
    <string name="simple_event_list">Simple event list</string>
    <string name="no_upcoming_events">Seems like you don\'t have any upcoming events.</string>
    <string name="add_some_events">You can add some with the Plus button at the bottom.</string>
    <string name="details">Details</string>
    <string name="go_to_today">Go to today</string>
    <string name="snooze">Snooze</string>
    <string name="none">None</string>
    <string name="contact_info">Contact Info</string>
    <string name="general_info">General Info</string>
    <string name="no_upcoming_products">Seems like you don\'t have any products.</string>
    <string name="add_some_products">You can add product with the Plus button at the bottom.</string>
    <string name="no_upcoming_contacts">Seems like you don\'t have any contacts.</string>
    <string name="add_some_contacts">You can add contact with the Plus button at the bottom.</string>
    <string name="no_upcoming_records">Seems like you don\'t have any records.</string>
    <string name="add_some_records">You can add record with the Plus button at the bottom.</string>
    <string name="widget_monthly">Calendar monthly</string>
    <string name="widget_list">Calendar event list</string>
    <string name="event">Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="new_event">New Event</string>
    <string name="title_empty">Title cannot be empty</string>
    <string name="end_before_start">The event cannot end earlier than it starts</string>
    <string name="event_added">Event added successfully</string>
    <string name="event_updated">Event updated successfully</string>
    <string name="filter_events_by_type">Filter events by type</string>
    <string name="task">Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_task">New Task</string>
    <string name="task_added">Task added successfully</string>
    <string name="task_updated">Task updated successfully</string>
    <string name="no_priority">No Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="urgent_priority">Urgent Priority</string>
    <string name="pending_status">Pending</string>
    <string name="on_progress_status">On Progress</string>
    <string name="testing_status">Testing</string>
    <string name="completed_status">Completed</string>
    <string name="edit_item">Edit Item</string>
    <string name="new_item">New Item</string>
    <string name="item_added">Item added successfully</string>
    <string name="item_updated">Item updated successfully</string>
    <string name="items">Items</string>
    <string name="client">Client</string>
    <string name="edit_client">Edit Client</string>
    <string name="new_client">New Client</string>
    <string name="client_added">Client added successfully</string>
    <string name="client_updated">Client updated successfully</string>
    <string name="no_upcoming_clients">Seems like you don\'t have any clients.</string>
    <string name="add_some_clients">You can add client with the Plus button at the bottom.</string>
    <string name="contact">Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="new_contact">New Contact</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_updated">Contact updated successfully</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="is_primary_contact">Is Primary Contact</string>
    <string name="email">Email</string>
    <string name="user_id">User ID</string>
    <string name="lead">Lead</string>
    <string name="edit_lead">Edit Lead</string>
    <string name="new_lead">New Lead</string>
    <string name="lead_added">Lead added successfully</string>
    <string name="lead_updated">Lead updated successfully</string>
    <string name="is_public_lead">Is Public Lead</string>
    <string name="leads">Leads</string>
    <string name="repetition">Repetition</string>
    <string name="no_repetition">No repetition</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="weeks_raw">weeks</string>
    <string name="months_raw">months</string>
    <string name="years_raw">years</string>
    <string name="repeat_till">Repeat till</string>
    <string name="forever">Forever</string>
    <string name="event_is_repeatable">The event is repeatable</string>
    <string name="selection_contains_repetition">The selection contains repeating events</string>
    <string name="delete_one_only">Delete the selected occurrence only</string>
    <string name="delete_all_occurrences">Delete all occurrences</string>
    <string name="update_one_only">Update the selected occurrence only</string>
    <string name="update_all_occurrences">Update all occurrences</string>
    <string name="repeat_till_date">Repeat till a date</string>
    <string name="repeat_x_times">Repeat x times</string>
    <string name="repeat_forever">Repeat forever</string>
    <string name="times">times</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_on">Repeat on</string>
    <string name="every_day">Every day</string>
    <string name="selected_days">On selected days</string>
    <string name="the_same_day">The same day</string>
    <string name="the_last_day">The last day</string>
    <string name="repeat_on_the_same_day">Repeat on the same day each month</string>
    <string name="repeat_on_the_last_day">Repeat on the last day of the month</string>
    <string name="repeat_every_m">Repeat every</string>
    <string name="every_m">Every</string>
    <string name="first_m">first</string>
    <string name="second_m">second</string>
    <string name="third_m">third</string>
    <string name="fourth_m">fourth</string>
    <string name="last_m">last</string>
    <string name="repeat_every_f">Repeat every</string>
    <string name="every_f">Every</string>
    <string name="first_f">first</string>
    <string name="second_f">second</string>
    <string name="third_f">third</string>
    <string name="fourth_f">fourth</string>
    <string name="last_f">last</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="birthdays">Birthdays</string>
    <string name="add_birthdays">Add contact birthdays</string>
    <string name="no_birthdays">No birthdays have been found</string>
    <string name="birthdays_added">Birthdays added successfully</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="add_anniversaries">Add contact anniversaries</string>
    <string name="no_anniversaries">No anniversaries have been found</string>
    <string name="anniversaries_added">Anniversaries added successfully</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No reminder</string>
    <string name="at_start">At start</string>
    <string name="custom">Custom</string>
    <string name="before">before</string>
    <string name="minutes_raw">minutes</string>
    <string name="hours_raw">hours</string>
    <string name="days_raw">days</string>
    <string name="add_another_reminder">Add another reminder</string>
    <string name="event_reminders">Event reminders</string>
    <plurals name="minutes_before">
        <item quantity="one">%d minute before</item>
        <item quantity="other">%d minutes before</item>
    </plurals>
    <plurals name="hours_before">
        <item quantity="one">%d hour before</item>
        <item quantity="other">%d hours before</item>
    </plurals>
    <plurals name="days_before">
        <item quantity="one">%d day before</item>
        <item quantity="other">%d days before</item>
    </plurals>
    <string name="importing">Importing…</string>
    <string name="exporting">Exporting…</string>
    <string name="import_events">Import events</string>
    <string name="export_events">Export events</string>
    <string name="import_events_from_ics">Import events from an .ics file</string>
    <string name="export_events_to_ics">Export events to an .ics file</string>
    <string name="events_imported_successfully">Events have been imported successfully</string>
    <string name="events_exported_successfully">Events have been exported successfully</string>
    <string name="importing_events_failed">Importing events failed</string>
    <string name="exporting_events_failed">Exporting events failed</string>
    <string name="importing_some_events_failed">Importing some events failed</string>
    <string name="exporting_some_events_failed">Exporting some events failed</string>
    <string name="default_event_type">Default event type</string>
    <string name="no_events_for_exporting">No events for exporting have been found</string>
    <string name="export_past_events_too">Export past events too</string>
    <string name="include_event_types">Include event types</string>
    <string name="filename_without_ics">Filename (without .ics)</string>
    <string name="no_title">No title</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="vat">RUC</string>
    <string name="phonenumber">Phone Number</string>
    <string name="website">Web Site</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip">Zip Code</string>
</resources>