<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/exit_menu"
    android:icon="@android:drawable/ic_lock_power_off"
    android:title="@string/exit" />

    <item android:id="@+id/calendar_menu"
        android:icon="@drawable/ic_event_white_24dp"
        android:title="@string/calendar"
        />
    <item android:id="@+id/tasks_menu"
        android:icon="@drawable/ic_view_list_white_24dp"
        android:title="@string/tasks"
        />
    <item android:id="@+id/products_menu"
        android:icon="@drawable/ic_widgets_white_24dp"
        android:title="@string/products"
        />
    <item android:id="@+id/leads_menu"
        android:icon="@drawable/ic_perm_contact_calendar_white_24dp"
        android:title="@string/leads"
        />
    <!--<item android:id="@+id/sales_menu"-->
        <!--android:icon="@drawable/ic_shop_white_24dp"-->
        <!--android:title="@string/sales"-->
        <!--/>-->
    <item android:id="@+id/clients_menu"
        android:icon="@drawable/ic_people_outline_white_24dp"
        android:title="@string/clients"
        />
    <!--<item android:id="@+id/reports_menu"-->
        <!--android:icon="@drawable/ic_timeline_white_24dp"-->
        <!--android:title="@string/reports"-->
        <!--/>-->
    <item android:id="@+id/dashboard_menu"
        android:icon="@drawable/ic_track_changes_white_24dp"
        android:title="@string/dashboard"
        />
    <item android:id="@+id/geotrack_menu"
        android:icon="@drawable/ic_person_pin_circle_white_24dp"
        android:title="@string/geotrack"
        />
    <!--<item android:id="@+id/dialing_menu"-->
        <!--android:icon="@drawable/ic_dialer_sip_white_24dp"-->
        <!--android:title="@string/dialing"-->
        <!--/>-->
    <!--<item android:id="@+id/expenses_menu"-->
        <!--android:icon="@drawable/ic_attach_money_white_24dp"-->
        <!--android:title="@string/expenses"-->
        <!--/>-->
    <item android:id="@+id/geolocation_menu"
        android:icon="@drawable/ic_location_on_white_24dp"
        android:title="@string/geolocation"
        />
</menu>