<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_primary_dark"
    android:gravity="center"
    tools:context="com.ecandle.raykun.activities.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/raykunbanner"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_margin="0dp"
            android:background="@color/color_primary_dark"
            android:src="@drawable/raykunbanner"
            android:contentDescription="Raykun Banner" />

        <TextView
            android:id="@+id/raykunlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginTop="1dip"
            android:text="@string/smart_sales_force"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/white"
            android:hint="@string/enter_your_email"
            android:text=""
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_marginBottom="10pt"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/white"
            android:hint="@string/enter_your_password"
            android:text=""
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/buLogin"
            android:layout_width="50pt"
            android:layout_height="wrap_content"
            android:background="@drawable/bu_color"
            android:onClick="buLoginEvent"
            android:layout_marginBottom="10pt"
            android:layout_marginTop="10pt"
            android:textColor="@color/white"
            android:text="@string/login" />

        <Button
            android:id="@+id/buDemo"
            android:layout_width="50pt"
            android:layout_height="wrap_content"
            android:background="@drawable/bu_color"
            android:onClick="buDemoLoginEvent"
            android:text="@string/demo_login"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>