<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calendar_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/client_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/client_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:hint="@string/company"
                    android:inputType="textCapSentences"
                    android:maxLength="80"
                    android:maxLines="1"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_vat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_company"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:autoLink="all"
                    android:gravity="top"
                    android:hint="@string/vat"
                    android:inputType="textCapSentences|textMultiLine"
                    android:linksClickable="true"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_phonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_vat"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:autoLink="all"
                    android:gravity="top"
                    android:hint="@string/phonenumber"
                    android:inputType="numberDecimal"
                    android:linksClickable="true"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_phonenumber"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:autoLink="all"
                    android:gravity="top"
                    android:hint="@string/website"
                    android:inputType="numberDecimal"
                    android:linksClickable="true"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <!--<com.simplemobiletools.commons.views.MyTextView-->
                    <!--android:id="@+id/client_default_currency"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@+id/client_website"-->
                    <!--android:layout_marginLeft="@dimen/activity_margin"-->
                    <!--android:layout_marginRight="@dimen/activity_margin"-->
                    <!--android:layout_marginTop="@dimen/activity_margin"-->
                    <!--android:autoLink="all"-->
                    <!--android:gravity="top"-->
                    <!--android:hint="@string/default_currency"-->
                    <!--android:inputType="numberDecimal"-->
                    <!--android:minEms="20"-->
                    <!--android:textCursorDrawable="@null"-->
                    <!--android:textSize="@dimen/day_text_size"/>-->

                <!--<com.simplemobiletools.commons.views.MyTextView-->
                    <!--android:id="@+id/client_default_language"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@+id/client_default_currency"-->
                    <!--android:layout_marginLeft="@dimen/activity_margin"-->
                    <!--android:layout_marginRight="@dimen/activity_margin"-->
                    <!--android:layout_marginTop="@dimen/activity_margin"-->
                    <!--android:hint="@string/default_language"-->
                    <!--android:inputType="textCapWords"-->
                    <!--android:maxLength="80"-->
                    <!--android:maxLines="1"-->
                    <!--android:minEms="20"-->
                    <!--android:textCursorDrawable="@null"-->
                    <!--android:textSize="@dimen/day_text_size"/>-->

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_website"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="top"
                    android:hint="@string/latitude"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_latitude"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="top"
                    android:hint="@string/longitude"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_longitude"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="top"
                    android:hint="@string/address"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_address"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="top"
                    android:hint="@string/city"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_city"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="top"
                    android:hint="@string/state"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_state"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="top"
                    android:hint="@string/country"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>


                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/client_zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/client_country"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="top"
                    android:hint="@string/zip"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minEms="20"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/day_text_size"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
